add greatmoedgpt2 eval

--- a/evals.ipynb
+++ b/evals.ipynb
@@ -27,7 +27,8 @@
     "real_path = '/hdd3/sonia/data/adult.csv'\n",
     "dgpt2_path = '/hdd3/sonia/be_great/ckpts/dgpt2/adult-allcol/samples.csv'\n",
     "moe_path = '/hdd3/sonia/be_great/ckpts/moe/dgpt2/adult-allcol/jul21/samplesclean.csv'\n",
-    "greatdpt2_path = '/hdd3/sonia/be_great/ckpts/dgpt2-greatclean.csv'"
+    "greatdpt2_path = '/hdd3/sonia/be_great/ckpts/dgpt2-greatclean.csv'\n",
+    "moegreatdgpt2_path = '/hdd3/sonia/be_great/ckpts/great/adult/moegreatdgpt2-aug01.csv'"
    ]
   },
   {
@@ -39,13 +40,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(48842, 15) (5935, 15) (9106, 15) (9815, 15)\n"
+      "(48842, 15) (5935, 15) (9106, 15) (9815, 15) (3993, 15)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "((5935, 15), (5935, 15), (5935, 15), (5935, 15))"
+       "((3993, 15), (3993, 15), (3993, 15), (3993, 15), (3993, 15))"
       ]
      },
      "execution_count": 2,
@@ -58,15 +59,17 @@
     "dgpt2= pd.read_csv(dgpt2_path)\n",
     "moe  = pd.read_csv(moe_path)\n",
     "greatdgpt2=pd.read_csv(greatdpt2_path)\n",
-    "print(real.shape, dgpt2.shape, moe.shape, greatdgpt2.shape)\n",
+    "moegreatdgpt2=pd.read_csv(moegreatdgpt2_path)\n",
+    "print(real.shape, dgpt2.shape, moe.shape, greatdgpt2.shape, moegreatdgpt2.shape)\n",
     "\n",
     "rs = 2\n",
-    "min_dataset_size = min(len(real), len(dgpt2), len(moe), len(greatdgpt2))\n",
+    "min_dataset_size = min(len(real), len(dgpt2), len(moe), len(greatdgpt2), len(moegreatdgpt2))\n",
     "real = real.sample(min_dataset_size, random_state=rs)\n",
     "dgpt2=dgpt2.sample(min_dataset_size, random_state=rs)\n",
     "moe  =  moe.sample(min_dataset_size, random_state=rs)\n",
     "greatdgpt2 = greatdgpt2.sample(min_dataset_size, random_state=rs)\n",
-    "real.shape, dgpt2.shape, moe.shape, greatdgpt2.shape"
+    "moegreatdgpt2=moegreatdgpt2.sample(min_dataset_size, random_state=rs)\n",
+    "real.shape, dgpt2.shape, moe.shape, greatdgpt2.shape, moegreatdgpt2.shape"
    ]
   },
   {
@@ -77,7 +80,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['real', 'dgpt2', 'moe', 'greatdgpt2'])"
+       "dict_keys(['real', 'dgpt2', 'moe', 'greatdgpt2', 'moegreatdgpt2'])"
       ]
      },
      "execution_count": 3,
@@ -86,7 +89,7 @@
     }
    ],
    "source": [
-    "datadict = {'real':real, 'dgpt2':dgpt2, 'moe':moe, 'greatdgpt2':greatdgpt2}\n",
+    "datadict = {'real':real, 'dgpt2':dgpt2, 'moe':moe, 'greatdgpt2':greatdgpt2, 'moegreatdgpt2':moegreatdgpt2}\n",
     "datadict.keys()"
    ]
   },
@@ -94,12 +97,28 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "real\n",
+      "dgpt2\n",
+      "moe\n",
+      "greatdgpt2\n",
+      "moegreatdgpt2\n"
+     ]
+    }
+   ],
    "source": [
     "ords = ['workclass', 'education', 'marital-status', 'occupation', \n",
     "        'relationship', 'race', 'sex', 'native-country'] # MUST BE IN ORDER\n",
     "nums = ['age', 'fnlwgt', 'education-num', 'capital-gain', 'capital-loss', 'hours-per-week', ]\n",
     "labs = ['income']\n",
+    "\n",
+    "for k, v in datadict.items():\n",
+    "    print(k)\n",
+    "    datadict[k] = datadict[k][ords+nums+labs] # ensure they're in order\n",
     "\n",
     "# for each ord column, get all unique values occurign in real/synth, train/test\n",
     "categories = []\n",
@@ -151,7 +170,8 @@
       "real\n",
       "dgpt2\n",
       "moe\n",
-      "greatdgpt2\n"
+      "greatdgpt2\n",
+      "moegreatdgpt2\n"
      ]
     }
    ],
@@ -173,22 +193,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "real on real: \t\t\t0.8438079191238416\n",
-      "dgpt2 on real: \t\t\t0.7922493681550127\n",
-      "moe on real: \t\t\t0.763100252737995\n",
-      "greatdgpt2 on real: \t\t\t0.7897219882055603\n",
-      "real on dgpt2: \t\t\t0.7118786857624263\n",
-      "dgpt2 on dgpt2: \t\t\t0.776748104465038\n",
-      "moe on dgpt2: \t\t\t0.7529907329401854\n",
-      "greatdgpt2 on dgpt2: \t\t\t0.7369839932603202\n",
-      "real on moe: \t\t\t0.6480202190395956\n",
-      "dgpt2 on moe: \t\t\t0.7590564448188711\n",
-      "moe on moe: \t\t\t0.8033698399326032\n",
-      "greatdgpt2 on moe: \t\t\t0.7492839090143218\n",
-      "real on greatdgpt2: \t\t\t0.7617523167649537\n",
-      "dgpt2 on greatdgpt2: \t\t\t0.783150800336984\n",
-      "moe on greatdgpt2: \t\t\t0.7403538331929234\n",
-      "greatdgpt2 on greatdgpt2: \t\t\t0.809435551811289\n"
+      "real on real: \t\t\t0.8494866015527173\n",
+      "dgpt2 on real: \t\t\t0.8016528925619835\n",
+      "moe on real: \t\t\t0.8146756824442775\n",
+      "greatdgpt2 on real: \t\t\t0.8196844477836214\n",
+      "moegreatdgpt2 on real: \t\t\t0.8254445279238668\n",
+      "real on dgpt2: \t\t\t0.639869772101177\n",
+      "dgpt2 on dgpt2: \t\t\t0.7751064362634611\n",
+      "moe on dgpt2: \t\t\t0.7420485850237917\n",
+      "greatdgpt2 on dgpt2: \t\t\t0.7325319308790383\n",
+      "moegreatdgpt2 on dgpt2: \t\t\t0.7145003756574004\n",
+      "real on moe: \t\t\t0.6378662659654395\n",
+      "dgpt2 on moe: \t\t\t0.7738542449286251\n",
+      "moe on moe: \t\t\t0.7986476333583772\n",
+      "greatdgpt2 on moe: \t\t\t0.7458051590282995\n",
+      "moegreatdgpt2 on moe: \t\t\t0.7743551214625595\n",
+      "real on greatdgpt2: \t\t\t0.7518156774355121\n",
+      "dgpt2 on greatdgpt2: \t\t\t0.8064112196343601\n",
+      "moe on greatdgpt2: \t\t\t0.7953919358878037\n",
+      "greatdgpt2 on greatdgpt2: \t\t\t0.8131730528424743\n",
+      "moegreatdgpt2 on greatdgpt2: \t\t\t0.8029050838968195\n",
+      "real on moegreatdgpt2: \t\t\t0.7721011770598547\n",
+      "dgpt2 on moegreatdgpt2: \t\t\t0.8564988730277987\n",
+      "moe on moegreatdgpt2: \t\t\t0.8692712246431255\n",
+      "greatdgpt2 on moegreatdgpt2: \t\t\t0.8407212622088656\n",
+      "moegreatdgpt2 on moegreatdgpt2: \t\t\t0.8762834961182069\n"
      ]
     }
    ],
